<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Broadcast Style Demo</string>
    <string name="scan_barcode">Please Scan Barcode</string>
    <string name="sound">Scan Sound</string>
    <string name="vibrate">Scan Vibration</string>
    <string name="scan_continuous">Scan Continuous</string>
    <string name="input_time">Please Input Time</string>
    <string name="cotinue_time">Continuous Time</string>
    <string name="continuous_light">Continuous Light</string>
    <string name="duration_time">Duration Time</string>
    <string name="analog_button">Analog button scan</string>

</resources>
