<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/scan_barcode" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sound" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vibrate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ADDBF7"
        android:orientation="vertical"
        >
        <Switch

            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_continuous" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            >

            <EditText
                android:id="@+id/et3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_time" />

            <Button
                android:id="@+id/bt3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/cotinue_time"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="#ADDBF7"
        >
        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuous_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_time" />

            <Button
                android:id="@+id/bt4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/duration_time"
                android:gravity="center_horizontal"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="该项仅针对设备上提供该功能时方可设置，一般不需要配置"
            />
    </LinearLayout>



    <Button
        
        android:id="@+id/btScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/analog_button" />

    <TextView
        android:id="@+id/etVetsion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#C8C8C8"
        />

</LinearLayout>